Resolves: tdf#134831 reorg to expand inspector to fit full panel size

Change-Id: I73e37dff01d67f04ea5a2a82e4083ffd5bd46440
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99774
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>