sw/source/uibase/sidebar/SwPanelFactory.cxx
@@ -177,7 +177,7 @@ Reference<ui::XUIElement> SAL_CALL SwPanelFactory::createUIElement (
             rsResourceURL,
             xFrame,
             pPanel,
-            ui::LayoutSize(-1,-1,-1));
+            ui::LayoutSize(0,-1,-1));
     }
     else if (rsResourceURL.endsWith("/StylePresetsPanel"))
     {
